# Constellation-Evaluation-Task

./: README.md  meson.build
docs/: Doxyfile
docs/html/: annotated.html  annotated_dup.js  charts_8cpp.html  charts_8cpp__incl.map  charts_8cpp__incl.md5  charts_8h.html  charts_8h.js  charts_8h__dep__incl.map  charts_8h__dep__incl.md5  charts_8h__incl.map  charts_8h__incl.md5  charts_8h_source.html  classCharts-members.html  classCharts.html  classCharts.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMainWindow__coll__graph.map  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  index.js  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  mainWindow_8cpp.html  mainWindow_8cpp__incl.map  (+13 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  files_1.js  functions_0.js  functions_3.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js
src/: charts.cpp  charts.h  main.cpp  mainWindow.cpp  mainWindow.h
